force-app/main/default/objects/npsp__Address__c/npsp__Address__c.object-meta.xml
<CustomObject>
</CustomObject>