force-app/main/default/objects/npsp__Address__c/fields/sffr_PND__c.field-meta.xml
<CustomField>
    <fullName>sffr_PND__c</fullName>
    <label>PND</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>