force-app/main/default/objects/npsp__Address__c/fields/sffr_pnd_reason__c.field-meta.xml
<CustomField>
    <fullName>sffr_pnd_reason__c</fullName>
    <label>PND reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sffr_pnd</valueSetName>
    </valueSet>
</CustomField>