force-app/main/default/objects/npsp__Address__c/fields/SFFR_UM__c.field-meta.xml
<CustomField>
    <fullName>SFFR_UM__c</fullName>
    <label>Number of Undelivered Mail</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>