force-app/main/default/objects/npsp__Address__c/fields/SFFR_UM_Reason__c.field-meta.xml
<CustomField>
    <fullName>SFFR_UM_Reason__c</fullName>
    <label>Undelivered Mail Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SFFR_UM</valueSetName>
    </valueSet>
</CustomField>